<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:padding="24dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <EditText
        android:id="@+id/etLat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lat"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#888888"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etLon"
        app:layout_constraintHorizontal_weight="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etLon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lon"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#888888"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintStart_toEndOf="@id/etLat"
        app:layout_constraintEnd_toStartOf="@+id/etRadius"
        app:layout_constraintHorizontal_weight="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etRadius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_radius"
        android:importantForAutofill="no"
        android:text="1000"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#888888"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintStart_toEndOf="@id/etLon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.8"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnGpsLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_gps_location"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/etLat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIpLocation" />

    <Button
        android:id="@+id/btnIpLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ip_location"
        app:layout_constraintTop_toTopOf="@id/btnGpsLocation"
        app:layout_constraintBottom_toBottomOf="@id/btnGpsLocation"
        app:layout_constraintStart_toEndOf="@id/btnGpsLocation"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnFetch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_fetch"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnGpsLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnFetch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvConsole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FF00"
            android:typeface="monospace"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            android:text="@string/console_ready" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
